feat: update, delete, create story and review in front optimize, fixtures

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -15,8 +15,6 @@ h2 {
     color: #cccccc;
 }
 
-
-
 /* STRUCTURE */
 
 .wrapper {
@@ -64,8 +62,6 @@ h2.active {
     color: #0d0d0d;
     border-bottom: 2px solid #5fbae9;
 }
-
-
 
 /* FORM TYPOGRAPHY*/
 
@@ -129,6 +125,32 @@ input[type=text]:focus {
     border-bottom: 2px solid #EB6863;
 }
 
+textarea {
+    background-color: #f6f6f6;
+    border: none;
+    color: #0d0d0d;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 5px;
+    width: 85%;
+    border: 2px solid #f6f6f6;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+    -webkit-border-radius: 5px 5px 5px 5px;
+    border-radius: 5px 5px 5px 5px;
+}
+
+textarea {
+    background-color: #fff;
+    border-bottom: 2px solid #EB6863;
+}
+
 input[type=email] {
     background-color: #f6f6f6;
     border: none;
@@ -184,8 +206,6 @@ input[type=password]:focus {
 input[type=text]:placeholder {
     color: #cccccc;
 }
-
-
 
 /* ANIMATIONS */
 
@@ -289,8 +309,6 @@ input[type=text]:placeholder {
     width: 100%;
 }
 
-
-
 /* OTHERS */
 
 *:focus {
@@ -319,4 +337,19 @@ input[type=text]:placeholder {
     align-items: center;
     justify-content: center;
 
+}
+
+.width-100{
+    width: 100%;
+}
+.mw-400{
+    max-width: 400px;
+}
+
+.ml-auto{
+    margin-left: auto;
+}
+
+.mr-3{
+    margin-right: 15px;
 }
